Fix display layout shift

--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ h1 {
 }
 
 #last-operand {
+  height: 16px;
+
   text-align: left;
   font-size: 16px;
 }
